<resources>
    <string name="app_name">animal-collector-alpha-0.1.0</string>
    <!-- Content descriptions -->
    <string name="content_desc_photo_animals">photo-animals</string>
    <string name="content_desc_album">album</string>
    <string name="content_desc_animal">animal</string>
    <string name="content_desc_arrow">right-arrow</string>
    <string name="content_desc_close">close</string>
    <string name="content_desc_add">add</string>
    <string name="content_desc_edit">edit</string>
    <string name="content_desc_delete">delete</string>
    <string name="content_desc_location">location</string>
    <!-- Input hints -->
    <string name="hint_album_name">Album name</string>
    <string name="hint_animal_name">Animal name</string>
    <string name="hint_animal_tags">Tags (space-separated)</string>
    <string name="hint_photo_desc">Description (max 200)</string>
    <!-- Text labels -->
    <string name="action_settings">Settings</string>
    <string name="label_albums">Albums</string>
    <string name="label_animals">Animals</string>
    <string name="text_none">None</string>
    <string name="label_create_animal">Create Animal</string>
    <string name="label_edit_animal">Edit Animal</string>
    <string name="label_create_album">Create Album</string>
    <string name="label_edit_album">Edit Album</string>
    <string name="label_select_category">Category</string>
    <string name="label_select_animals">Select Animals (required)</string>
    <string name="label_select_animals_in_category">Select Animals in %1$s (required)</string>
    <string name="label_select_albums">Select Albums</string>
    <string name="label_create_photo">Create Photo</string>
    <string name="label_update_photo">Update Photo</string>
    <string name="label_add_animal">Add animal</string>
    <string name="label_add_album">Add album</string>
    <!-- Button labels -->
    <string name="btn_save">save</string>
    <string name="btn_confirm_positive">yes</string>
    <string name="btn_confirm_negative">not now</string>
    <string name="btn_confirm_negative_no">no</string>
    <string name="btn_new_animal">New Animal</string>
    <string name="btn_new_album">New Album</string>
    <string name="btn_confirm">confirm</string>
    <string name="btn_select">select</string>
    <string name="btn_new">new</string>
    <string name="btn_edit">edit</string>
    <string name="btn_delete">delete</string>
    <!-- Dialog messages -->
    <string name="message_delete_confirm">Are you sure you want to delete this %1$s?\n</string>
    <string name="message_delete_confirm_animal">Photos which are only associated with this animal would also be removed from other albums.</string>
    <string name="message_delete_confirm_photo">Are you sure you want to delete this photo from all collections?</string>
    <string name="warning_select_no_animal">Please select at least one animal!</string>
    <string name="warning_select_invalid_collections">At least one album AND one animal should belong to the same category!</string>
    <string name="message_create_photo_success">Photo uploaded.</string>
    <string name="message_update_photo_success">Photo updated.</string>
    <string name="message_delete_photo_success">Photo deleted.</string>
    <string name="message_create_album_success">Album created.</string>
    <string name="message_update_album_success">Album updated.</string>
    <string name="message_delete_album_success">Album deleted.</string>
    <string name="message_create_animal_success">Animal created.</string>
    <string name="message_update_animal_success">Animal updated.</string>
    <string name="message_delete_animal_success">Animal deleted.</string>
    <string name="title_enable_recognition">Enable Animal Recognition</string>
    <string name="message_enable_recognition">Do you want to auto-recognize the animal in the photo?</string>
    <string name="message_recognized_category_confirm">Recognized %1$s in the photo, is it correct?\n</string>
    <string name="message_recognized_category_unknown">Cannot recognize the animal in the photo :(</string>
    <string name="message_recognition_progress">Analysing photo…\nThis will take a few seconds.</string>
</resources>
