<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <TextView
        android:id="@+id/labelEditPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_select_albums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/label_albums"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSelectAlbums"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:height="30dp"
            android:background="@color/colorPrimary"
            android:minHeight="0dp"
            android:text="@string/btn_select" />
    </LinearLayout>

    <TextView
        android:id="@+id/textSelectedAlbums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/text_none"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_select_animals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/label_animals"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSelectAnimals"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:height="30dp"
            android:background="@color/colorPrimary"
            android:minHeight="0dp"
            android:text="@string/btn_select" />
    </LinearLayout>

    <TextView
        android:id="@+id/textSelectedAnimals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_none"
        android:textSize="18sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_photo_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputPhotoDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_photo_desc"
            android:inputType="text"
            android:maxLength="200"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelPhotoEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/btnSavePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_save" />
    </LinearLayout>
</LinearLayout>