<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <TextView
        android:id="@+id/labelEditPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_select_animals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/label_animals"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnSelectAnimals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:contentDescription="@string/content_desc_edit"
            android:elevation="4dp"
            android:src="@drawable/ic_mode_edit_24dp"
            android:tint="@color/colorPrimaryLight" />
    </LinearLayout>

    <TextView
        android:id="@+id/textSelectedAnimals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/text_none"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_select_albums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/label_albums"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnSelectAlbums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:contentDescription="@string/content_desc_edit"
            android:elevation="4dp"
            android:src="@drawable/ic_mode_edit_24dp"
            android:tint="@color/colorPrimaryLight" />
    </LinearLayout>

    <TextView
        android:id="@+id/textSelectedAlbums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/text_none"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_photo_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputPhotoDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_photo_desc"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnCancelPhotoEdit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryLight"
            android:text="@android:string/cancel"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnSavePhoto"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/btn_save"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>