<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="1000dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"
        android:paddingRight="30dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/label_edit_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/label_edit_album"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/btnCloseDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/content_desc_close"
            android:src="@drawable/ic_close" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingBottom="30dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputAlbumName"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_album_name"
                android:inputType="text"
                android:maxLength="32"
                android:maxLines="1"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <include
            android:id="@+id/btnSaveAlbum"
            layout="@layout/button_save" />
    </LinearLayout>
</LinearLayout>